--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,30 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-TW">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Git Viewer 介紹</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="slider">
-        <button onclick="previousSlide()" style="position: absolute; left: 10px; top: 50%;">上一張</button>
-        <button onclick="nextSlide()" style="position: absolute; right: 10px; top: 50%;">下一張</button>
-        <div class="slides">
-            <div id="slide-1">
-                <img src="img1.jpg" alt="Git Viewer 功能一">
-                <p>Git Viewer 功能介紹一</p>
-            </div>
-            <div id="slide-2">
-                <img src="img2.jpg" alt="Git Viewer 功能二">
-                <p>Git Viewer 功能介紹二</p>
-            </div>
-            <div id="slide-3">
-                <img src="img3.jpg" alt="Git Viewer 功能三">
-                <p>Git Viewer 功能介紹三</p>
-            </div>
+      <button
+        onclick="previousSlide()"
+        style="position: absolute; left: 10px; top: 50%"
+      >
+        上一張
+      </button>
+      <button
+        onclick="nextSlide()"
+        style="position: absolute; right: 10px; top: 50%"
+      >
+        下一張
+      </button>
+      <div class="slides">
+        <div id="slide-1">
+          <img src="img1.jpg" alt="Git Viewer 功能一" />
+          <p>Git Viewer 功能介紹一</p>
         </div>
+        <div id="slide-2">
+          <img src="img2.jpg" alt="Git Viewer 功能二" />
+          <p>Git Viewer 功能介紹二</p>
+        </div>
+        <div id="slide-3">
+          <img src="img3.jpg" alt="Git Viewer 功能三" />
+          <p>Git Viewer 功能介紹三</p>
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
